--- a/html/about.html
+++ b/html/about.html
@@ -14,8 +14,7 @@
 </head>
 
 <body>
-
-    <header>
+    <header> <!-- header di semua halaman sama, hanya di index yang berbeda src nya-->
         <div class="header-top">
             <div class="container">
                 <div class="social-media">
@@ -26,6 +25,8 @@
                             src="../assets/logo-facebook.webp" alt="Facebook" class="logo-fb" title="Facebook"></a>
                     <a href="https://wa.me/6282181296229" target="_blank"><img src="../assets/logo-whatsapp.webp"
                             alt="WhatsApp" class="logo-wa" title="WhatsApp"></a>
+                    <a href="https://github.com/pangeranvalerensco-maker" target="_blank"><img
+                            src="../assets/logo-github.jpg" alt="WhatsApp" class="logo-github" title="GitHub"></a>
                 </div>
                 <nav class="header-top-nav">
                     <ul>
@@ -129,11 +130,11 @@
     </header>
 
     <main>
-        <div class="container page-content">
+        <div class="container page-content"> <!-- Kontainer untuk konten halaman -->
             <h1 class="page-title" data-translate-key="about-us-title">Tentang Kami</h1>
 
-            <div class="about-layout">
-                <div class="about-text-content">
+            <div class="about-layout"> <!-- Layout untuk halaman tentang kami -->
+                <div class="about-text-content"> <!-- Konten teks tentang kami -->
                     <h2 data-translate-key="about-welcome-title">Selamat Datang di MineCart!</h2>
                     <p data-translate-key="about-p1">
                         MineCart lahir dari kecintaan kami terhadap dunia MineCraft dan keinginan untuk menyediakan
@@ -148,20 +149,20 @@
                     </p>
                 </div>
 
-                <div class="about-media-content">
-                    <figure class="about-image">
+                <div class="about-media-content"> <!-- Konten media tentang kami -->
+                    <figure class="about-image"> <!-- Gambar tentang kami -->
                         <img src="../assets/minecart-hq.png" alt="Kantor Pusat MineCart">
                         <figcaption data-translate-key="about-hq-title">MineCart HQ</figcaption>
                     </figure>
                 </div>
             </div>
-            <div class="dev-tribute">
+            <div class="dev-tribute"> <!-- Penghargaan untuk Penguji -->
                 <p data-translate-key="dev-praise-1">DIVDIK BAIK</p>
                 <p data-translate-key="dev-praise-2">DIVDIK GANTENG & CANTIK</p>
                 <p data-translate-key="dev-praise-3">DIVDIK BAIK HATI</p>
             </div>
 
-            <div class="thank-you-note">
+            <div class="thank-you-note"> <!-- Catatan terima kasih -->
                 <p data-translate-key="thank-you-note-a"> Terima kasih kami ucapkan kepada Divisi Pendidikan yang dengan
                     sabar mengajari dan menghadapi kami.</p>
                 <p data-translate-key="thank-you-note-b"> Terkhusus juga Kepada Teh Mora Fidela, Instruktur terbaik
@@ -169,7 +170,7 @@
                 </p>
             </div>
         </div>
-        <section class="contact-section">
+        <section class="contact-section"> <!-- Bagian kontak -->
             <div class="container">
                 <h2 data-translate-key="contact-title">Hubungi Kami</h2>
                 <div class="contact-grid">
@@ -211,7 +212,7 @@
         </div>
     </footer>
 
-    <div id="toast-container"></div>
+    <div id="toast-container"></div> <!-- Tempat untuk menampilkan notifikasi toast (sukses atau error) -->
     <script src="../js/script.js"></script>
 </body>
 
