--- a/html/cart.html
+++ b/html/cart.html
@@ -14,8 +14,7 @@
 </head>
 
 <body>
-    
-    <header>
+    <header> <!-- header di semua halaman sama, hanya di index yang berbeda src nya-->
         <div class="header-top">
             <div class="container">
                 <div class="social-media">
@@ -26,6 +25,8 @@
                             src="../assets/logo-facebook.webp" alt="Facebook" class="logo-fb" title="Facebook"></a>
                     <a href="https://wa.me/6282181296229" target="_blank"><img src="../assets/logo-whatsapp.webp"
                             alt="WhatsApp" class="logo-wa" title="WhatsApp"></a>
+                    <a href="https://github.com/pangeranvalerensco-maker" target="_blank"><img
+                            src="../assets/logo-github.jpg" alt="WhatsApp" class="logo-github" title="GitHub"></a>
                 </div>
                 <nav class="header-top-nav">
                     <ul>
@@ -129,18 +130,19 @@
     </header>
 
     <main>
-        <div class="container page-title">
+        <div class="container page-title"> <!-- Kontainer untuk judul halaman -->
             <h1 data-translate-key="cart-title">Keranjang Belanja</h1>
         </div>
 
-        <section class="cart-section">
+        <section class="cart-section"> <!-- Bagian utama keranjang belanja -->
             <div class="container">
-                <div class="cart-header"> <input type="checkbox" id="select-all-checkbox">
+                <div class="cart-header"> <input type="checkbox" id="select-all-checkbox"> <!-- Checkbox untuk memilih semua item -->
                     <label for="select-all-checkbox" data-translate-key="select-all">Pilih Semua</label>
                 </div>
-                <div id="cart-items-container">
-                </div>
-                <aside id="cart-summary" class="cart-summary">
+                <div id="cart-items-container"> <!-- Kontainer untuk item keranjang -->
+                    <!-- Item keranjang akan dimuat di sini melalui JavaScript -->
+                </div> 
+                <aside id="cart-summary" class="cart-summary"> <!-- Bagian ringkasan keranjang -->
                 </aside>
             </div>
         </section>
@@ -153,7 +155,7 @@
         </div>
     </footer>
 
-    <div id="toast-container"></div>
+    <div id="toast-container"></div> <!-- Tempat untuk menampilkan notifikasi toast (sukses atau error) -->
     <script src="../js/script.js"></script>
 </body>
 
