--- a/html/detail.html
+++ b/html/detail.html
@@ -14,8 +14,7 @@
 </head>
 
 <body>
-
-    <header>
+    <header> <!-- header di semua halaman sama, hanya di index yang berbeda src nya-->
         <div class="header-top">
             <div class="container">
                 <div class="social-media">
@@ -26,6 +25,8 @@
                             src="../assets/logo-facebook.webp" alt="Facebook" class="logo-fb" title="Facebook"></a>
                     <a href="https://wa.me/6282181296229" target="_blank"><img src="../assets/logo-whatsapp.webp"
                             alt="WhatsApp" class="logo-wa" title="WhatsApp"></a>
+                    <a href="https://github.com/pangeranvalerensco-maker" target="_blank"><img
+                            src="../assets/logo-github.jpg" alt="WhatsApp" class="logo-github" title="GitHub"></a>
                 </div>
                 <nav class="header-top-nav">
                     <ul>
@@ -128,20 +129,20 @@
         </div>
     </header>
 
-    <main>
-        <div class="container">
-            <div class="product-detail-layout">
-                <div id="product-images" class="product-detail-images">
+    <main> 
+        <div class="container"> <!-- Kontainer utama untuk halaman detail produk -->
+            <div class="product-detail-layout"> <!-- Layout untuk detail produk -->
+                <div id="product-images" class="product-detail-images"> <!-- Gambar produk akan dimuat di sini -->
                 </div>
-                <div class="product-detail-info">
-                    <h1 id="product-title" data-translate-key="loading-product">Memuat...</h1>
+                <div class="product-detail-info"> <!-- Informasi detail produk -->
+                    <h1 id="product-title" data-translate-key="loading-product">Memuat...</h1> 
                     <p id="product-category" class="category-tag">Category</p>
                     <p id="product-price" class="price-detail">Rp 0</p>
                     <p id="product-description" data-translate-key="loading-description">Deskripsi produk sedang
-                        dimuat...</p>
+                        dimuat...</p> <!-- Deskripsi produk akan dimuat di sini -->
                     <p id="product-stock" data-translate-key="loading-stock">Stok: -</p>
 
-                    <div class="product-location-info">
+                    <div class="product-location-info"> 
                         <h3 data-translate-key="product-seller-title">Penjual:</h3>
                         <p><strong data-translate-key="seller-name-label">Nama Toko:</strong> <span
                                 id="product-seller-name">Memuat...</span></p>
@@ -169,7 +170,7 @@
         </div>
     </footer>
 
-    <div id="toast-container"></div>
+    <div id="toast-container"></div> 
     <script src="../js/script.js"></script>
 </body>
 
